--- a/Test/src/main/webapp/WEB-INF/web.xml
+++ b/Test/src/main/webapp/WEB-INF/web.xml
@@ -27,8 +27,12 @@
 		
 	<servlet-mapping>
 		<servlet-name>appServlet</servlet-name>
-		<url-pattern>/</url-pattern>
+		<url-pattern>*.do</url-pattern>
 	</servlet-mapping>
+	
+	<welcome-file-list>
+		<welcome-file>loginForm.do</welcome-file>
+	</welcome-file-list>
 	
 	<!-- Korean Filter -->
 	<filter>
